core/tests/spec/snapshots/blocks/paragraph/multi-line.snap
---
source: core/tests/test_runner/mod.rs
info: core/tests/test_runner/mod.rs
---
Paragraph(
	This is a paragraph
	spanning multiple
	lines.
)
---
With input:

This is a paragraph
spanning multiple
lines.


