core/tests/spec/snapshots/blocks/paragraph/other-test.snap
---
source: core/tests/test_runner/mod.rs
info: core/tests/test_runner/mod.rs
---
Paragraph(Just some paragraph.)
---
With input:

Just some paragraph.


