core/tests/spec/snapshots/blocks/paragraph/paragraph-with-inlines.snap
---
source: core/tests/test_runner/mod.rs
info: "Test 'paragraph-paragraph-with-inlines' from: spec/markup/blocks/paragraph.yml"
---
Paragraph(Paragraph **with**  inlines.)
---
With input:

Paragraph **with** inlines.


