core/tests/spec/snapshots/blocks/paragraph/simple-paragraph.snap
---
source: core/tests/test_runner/mod.rs
description: "Parse a simple paragraph.\n"
info: "Test 'paragraph-simple-paragraph' from: spec/markup/blocks/paragraph.yml"
---
Paragraph(Simple paragraph.)
---
With input:

Simple paragraph.


